feat: updated classes